--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -32,7 +32,7 @@
       </li>-->
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
+      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" (click)="logout()">Logout</button>
     </form>
   </div>
 </nav>
