Redirecionamento na expiração do token.

--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts.component.html
@@ -1,7 +1,8 @@
 <h2>Contacts</h2>
 
+<div *ngIf="!contacts">Loading...</div>
 <ul class="list-group list-group-flush">
-    <li class="list-group-item" *ngFor="let contact of contacts" 
+    <li class="list-group-item" *ngFor="let contact of contacts"
         routerLink="/contacts/{{contact.id}}">
         <span>{{contact.id}}</span> {{contact.name}}
     </li>
