--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -1,13 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="getLoggedUser()">
   <a class="navbar-brand" routerLink="/">{{title}}</a>
-  <button class="navbar-toggler" 
-    type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" 
-    aria-label="Toggle navigation">
+  <button class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-label="Toggle navigation"
+    (click)="isCollapsed = !isCollapsed"
+    [attr.aria-expanded]="!isCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse"
+    id="navbarSupportedContent"
+    [collapse]="isCollapsed" [isAnimated]="true">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
@@ -38,5 +44,5 @@
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
-  <app-messages></app-messages>
+  <!--<app-messages></app-messages>-->
 </div>
