--- a/contacts-ddd-portal/ClientApp/src/app/contact-details/contact-details.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contact-details/contact-details.component.html
@@ -1,20 +1,36 @@
-<div *ngIf="contact">
-
-    <h2>Details: {{contact.name | uppercase}}</h2>
-    <div><span>id: </span>{{contact.id}}</div>
+<div class="container">
+  <div *ngIf="contact">
+    <h3>Contact</h3>
+    <h2>{{contact.name}}</h2>
     <div>
-        <label>name:
-            <input [(ngModel)]="contact.name" placeholder="name"/>
+      <label>
+        Id:
+        <input type="text" class="form-control" [(ngModel)]="contact.id" disabled>
+      </label>
+    </div>
+    <div>
+        <label>
+          Name:
+          <input type="text" class="form-control" [(ngModel)]="contact.name" placeholder="Name"/>
         </label>
         <div *ngIf="contact.phones">
-            <h3>Phones</h3>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item" *ngFor="let phone of contact.phones">
-                    <span>{{phone.id}}</span> 
-                    <input type="tel" [(ngModel)]="phone.number" disabled>
-                </li>
-            </ul>
+          <h3>Phones</h3>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item" *ngFor="let phone of contact.phones">
+              <label>
+                Id:
+                <input type="tel" class="form-control" [(ngModel)]="phone.id" disabled>
+              </label>
+              <label>
+                Phone:
+                <input type="tel" class="form-control" [(ngModel)]="phone.number" disabled>
+              </label>
+            </li>
+          </ul>
         </div>
     </div>
-    <button (click)="goBack()">go back</button>
+    <button class="btn btn-outline-info" (click)="goBack()">
+      <i class="fa fa-arrow-left"></i> Go back
+    </button>
+  </div>
 </div>
