--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-details/contacts-details.component.html
@@ -29,6 +29,9 @@
           </ul>
         </div>
     </div>
+    <button class="btn btn-success" (click)="edit()">
+      <i class="fa fa-save"></i> Save
+    </button>&nbsp;
     <button class="btn btn-outline-info" (click)="goBack()">
       <i class="fa fa-arrow-left"></i> Go back
     </button>
