--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-add/contacts-add.component.html
@@ -3,14 +3,15 @@
   <div>
     <label>
       Name:
-      <input type="text" class="form-control" [(ngModel)]="contact.name"/>
+      <input type="text"  class="form-control" [(ngModel)]="contact.name" appAutofocus/>
     </label>
   </div>
   <hr>
-  <button class="btn btn-success" (click)="save()">
-    <i class="fa fa-save"></i> Save
-  </button>&nbsp;
   <button class="btn btn-outline-info" (click)="goBack()">
-    <i class="fa fa-arrow-left"></i> Go back
+    <i class="fa fa-arrow-left"></i>
+  </button>
+  &nbsp;
+  <button class="btn btn-success" (click)="save()">
+    <i class="fa fa-save"></i>
   </button>
 </div>
