--- a/contacts-ddd-portal/ClientApp/src/app/login/login.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/login/login.component.html
@@ -1,29 +1,31 @@
-<div class=" text-center row justify-content-center">
-  <div class="col-md-6">
-    <h1>Contacts DDD</h1>
-    <form (ngSubmit)="login()" class="form-signin">
-      <h3 class="h3 mb-3 font-weight-normal">Login</h3>
-        <div class="form-group">
-            <input type="text"
-              class="form-control"
-              [(ngModel)]="user.userName"
-              placeholder="Username"
-              name="username" required appAutofocus>
-            <input type="password"
-              class="form-control"
-              [(ngModel)]="user.password"
-              placeholder="Password"
-              name="password" required>
-        </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block">Login</button>
-        <a class="btn btn-lg btn-danger btn-block" routerLink="../register">Signup</a>
-    </form>
-    <div *ngIf="error" class="alert alert-danger" role="alert">
-      {{error}}
+<div class="container">
+  <div class="row text-center justify-content-center">
+    <div class="col-md-6">
+      <h1>Contacts DDD</h1>
+      <form (ngSubmit)="login()" class="form-signin">
+        <h3 class="h3 mb-3 font-weight-normal">Login</h3>
+          <div class="form-group">
+              <input type="text"
+                class="form-control"
+                [(ngModel)]="user.userName"
+                placeholder="Username"
+                name="username" required appAutofocus>
+              <input type="password"
+                class="form-control"
+                [(ngModel)]="user.password"
+                placeholder="Password"
+                name="password" required>
+          </div>
+          <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block">Login</button>
+          <a class="btn btn-lg btn-danger btn-block" routerLink="../register">Signup</a>
+      </form>
+      <div *ngIf="error" class="alert alert-danger" role="alert">
+        {{error}}
+      </div>
     </div>
   </div>
 </div>
