--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -46,11 +46,11 @@
 
 </main>
 
-<div>
-  <footer class="container">
+<footer>
+  <div class="container">
     <hr>
     <p>&copy; RD Informática 2019</p>
-  </footer>
-</div>
+  </div>
+</footer>
 
 
