--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-add/contacts-add.component.html
@@ -7,11 +7,6 @@
     </label>
   </div>
   <hr>
-  <button class="btn btn-outline-info" (click)="goBack()">
-    <i class="fa fa-arrow-left"></i>
-  </button>
-  &nbsp;
-  <button class="btn btn-success" (click)="save()">
-    <i class="fa fa-save"></i>
-  </button>
+  <button class="btn btn-success" (click)="save()"><i class="fa fa-save"></i></button>&nbsp;
+  <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
 </div>
