--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-list/contacts.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-list/contacts.component.html
@@ -7,26 +7,26 @@
     <button class="btn btn-outline-success" routerLink="/contacts/new"> <i class="fa fa-plus-circle"></i></button>
 
     <!-- pager -->
-  <ul *ngIf="pager && pager.pages.length" class="pagination justify-content-end">
-    <li class="page-item" [ngClass]="{disabled:pager.currentPage === 0}">
-        <a class="page-link" (click)="firstPage()">First</a>
-    </li>
-    <li class="page-item" [ngClass]="{disabled:pager.currentPage === 0}">
-        <a class="page-link" (click)="priorPage()">Previous</a>
-    </li>
-    <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
-        <a class="page-link" (click)="selectedPage(page)">{{page + 1}}</a>
-    </li>
-    <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-        <a class="page-link" (click)="nextPage()">Next</a>
-    </li>
-    <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-        <a class="page-link" (click)="lastPage()">Last</a>
-    </li>
-  </ul>
+    <ul *ngIf="pager && pager.pages.length" class="pagination justify-content-end">
+      <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
+          <a class="page-link" (click)="firstPage()">First</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
+          <a class="page-link" (click)="priorPage()">Previous</a>
+      </li>
+      <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+          <a class="page-link" (click)="selectedPage(page)">{{page + 1}}</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled: isLastPage()}">
+          <a class="page-link" (click)="nextPage()">Next</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled: isLastPage()}">
+          <a class="page-link" (click)="lastPage()">Last</a>
+      </li>
+    </ul>
   </div>
 
-  <table id="contactsTable" class="table table-sm table-striped">
+  <table id="contactsTable" class="table table-striped">
     <thead>
       <tr>
         <th>Id</th>
