--- a/contacts-ddd-portal/ClientApp/src/app/phone/phone-add/phone-add.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/phone/phone-add/phone-add.component.html
@@ -1,1 +1,22 @@
-<p>phone-add works!</p>
+<div class="container">
+  <h1>Phone</h1>
+  <form>
+    <div>
+      <label>Number:</label>
+      <input type="text" name="number" [(ngModel)]="phone.number" id="" class="form-control">
+    </div>
+
+    <div>
+      <label>Type:</label>
+      <select class="form-control" [(ngModel)]="phone.type" name="type">
+        <option *ngFor="let item of keys()" [ngValue]="item">{{item}}</option>
+     </select>
+    </div>
+
+    <hr>
+
+    <button class="btn btn-success" (click)="save()"><i class="fa fa-save"></i></button>&nbsp;
+    <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
+
+  </form>
+</div>
