--- a/contacts-ddd-portal/ClientApp/src/app/phone/phone-list/phone-list.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/phone/phone-list/phone-list.component.html
@@ -1,15 +1,31 @@
 <div *ngIf="phones">
-  <h3>Phones</h3>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item" *ngFor="let phone of phones">
-      <label>
-        Id:
-        <input type="tel" class="form-control" [(ngModel)]="phone.id" disabled>
-      </label>
-      <label>
-        Phone:
-        <input type="tel" class="form-control" [(ngModel)]="phone.number" disabled>
-      </label>
-    </li>
-  </ul>
+  <h3>
+    <button class="btn btn-outline-success" routerLink="phone/new"><i class="fa fa-plus-circle"></i></button>&nbsp;
+    Phones
+  </h3>
+
+  <div class="card border-dark mb-3">
+    <div class="card-header">
+      <div class="row">
+        <div class="col-2"><strong>Id</strong></div>
+        <div class="col-4"><strong>Number</strong></div>
+        <div class="col-4"><strong>Type</strong></div>
+        <div class="col-2"></div>
+      </div>
+    </div>
+    <div class="card-body" *ngFor="let phone of phones">
+      <div class="row">
+        <div class="col-2">{{phone.id}}</div>
+        <div class="col-4">{{phone.number}}</div>
+        <div class="col-4">{{phone.type}}</div>
+        <div class="col-2">
+          <button class="btn btn-primary" routerLink="/contacts/edit/{{phone.contact.id}}/phone/edit/{{phone.id}}"><i class="fa fa-edit"></i></button>&nbsp;
+          <button class="btn btn-outline-danger" (click)="delete(phone.id)"><i class="fa fa-remove"></i></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
 </div>
