--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-details/contacts-details.component.html
@@ -1,27 +1,25 @@
-<div class="container">
-  <div *ngIf="contact">
-    <h3>
-      <button class="btn btn-outline-success" routerLink="/contacts/new"><i class="fa fa-plus-circle"></i></button>&nbsp;
-      Contact
-    </h3>
-    <h2>{{contact.name}}</h2>
-    <div class="row">
-      <div class="col-2">
-        <label><strong>Id</strong></label>
-        <input type="text" class="form-control" [(ngModel)]="contact.id" disabled>
-      </div>
-      <div class="col-10">
-        <label><strong>Name</strong></label>
-        <input type="text" class="form-control" [(ngModel)]="contact.name" placeholder="Name"/>
-      </div>
+<div *ngIf="contact">
+  <h3>
+    <button class="btn btn-outline-success mr-1" routerLink="/contacts/new"><i class="fa fa-plus-circle"></i></button>
+    Contact
+  </h3>
+  <h2>{{contact.name}}</h2>
+  <div class="row">
+    <div class="col-2">
+      <label><strong>Id</strong></label>
+      <input type="text" class="form-control" [(ngModel)]="contact.id" disabled>
     </div>
-
-    <hr>
-
-    <app-phone-list></app-phone-list>
-
-    <button class="btn btn-success" (click)="edit()"><i class="fa fa-save"></i></button>&nbsp;
-    <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
-
+    <div class="col-10">
+      <label><strong>Name</strong></label>
+      <input type="text" class="form-control" [(ngModel)]="contact.name" placeholder="Name" ap-autofocus />
+    </div>
   </div>
+
+  <hr>
+
+  <app-phone-list></app-phone-list>
+
+  <button class="btn btn-success mr-1" (click)="edit()"><i class="fa fa-save"></i></button>
+  <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
+
 </div>
