--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -1,47 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">{{title}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="contacts" *ngIf="getLoggedUser()">Contacts</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0" *ngIf="!getLoggedUser()">
-      <a class="btn btn-outline-success my-2 my-sm-0" routerLink="login">Login</a>
-    </form>
-    <form class="form-inline my-2 my-lg-0" *ngIf="getLoggedUser()">
-      <ul class="navbar-nav mr-auto form-inline">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle"
-            id="navbarDropdown" role="button"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Olá, {{getLoggedUser().userName}}
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <button class="dropdown-item" routerLink="account">
-              <i class="fa fa-user-circle"></i> Account
-            </button>
-            <div class="dropdown-divider"></div>
-            <button class="dropdown-item" (click)="logout()">
-              <i class="fa fa-sign-out"></i> Exit
-            </button>
-          </div>
-        </li>
-      </ul>
-    </form>
-  </div>
-</nav>
+<ap-header></ap-header>
 
 <main role="main">
 
-  <router-outlet></router-outlet>
+  <div class="container pt-2">
+    <router-outlet></router-outlet>
+  </div>
   <app-message></app-message>
 
 </main>
