--- a/contacts-ddd-portal/ClientApp/src/app/home/register/register.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/home/register/register.component.html
@@ -5,14 +5,14 @@
       <div class="col-6">
         <div class="form-group">
           <input type="text" class="form-control" [(ngModel)]="user.userName"
-                 name="userName" placeholder="Username" appAutofocus />
+                 name="userName" placeholder="Username" ap-autofocus />
         </div>
         <div class="form-group">
           <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Password" />
         </div>
       </div>
     </div>
-    <button class="btn btn-success" (click)="save()"><i class="fa fa-save"></i></button>&nbsp;
+    <button class="btn btn-success mr-1" (click)="save()"><i class="fa fa-save"></i></button>
     <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
   </form>
 </div>
