--- a/contacts-ddd-portal/ClientApp/src/app/home/register/register.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/home/register/register.component.html
@@ -4,11 +4,11 @@
     <div class="row">
       <div class="col-6">
         <div class="form-group">
-          <input type="text" class="form-control" [(ngModel)]="user.userName"
+          <input type="text" class="form-control" [(ngModel)]="userName"
                  name="userName" placeholder="Username" ap-autofocus />
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Password" />
+          <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Password" />
         </div>
       </div>
     </div>
