Applying lazy loading to application

--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -1,8 +1,7 @@
 <ap-header></ap-header>
-
 <main role="main">
 
-  <div class="container pt-2">
+  <div class="container">
     <router-outlet></router-outlet>
   </div>
   <app-message></app-message>
@@ -15,5 +14,4 @@
     <p>&copy; RD Informática {{today | date:'mediumDate'}}</p>
   </div>
 </footer>
-
 
