--- a/contacts-ddd-portal/ClientApp/src/app/home/login/login.component.css
+++ b/contacts-ddd-portal/ClientApp/src/app/home/login/login.component.css
@@ -15,7 +15,11 @@ body {
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+}
+
+.shadow {
+  box-shadow: 5px black;
+  background-color: rgb(221, 221, 221);
 }
 
 .form-signin {
