Refactoring on Messages and create FooterComponent

--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -1,17 +1,8 @@
 <ap-header></ap-header>
 <main role="main">
-
   <div class="container">
     <router-outlet></router-outlet>
   </div>
   <app-message></app-message>
-
 </main>
-
-<footer>
-  <div style="margin: 8px;">
-    <hr>
-    <p>&copy; RD Informática {{today | date:'mediumDate'}}</p>
-  </div>
-</footer>
-
+<ap-footer></ap-footer>
